monasca-persister: Add influxdb Requires
Change-Id: Iec0e5f35be53108a4eea529eea34592d76c9f2ea
(cherry picked from commit 1001e01593ea9fd8e40a99555897c5e11535ca62)

--- a/openstack/monasca-persister/monasca-persister.spec.j2
+++ b/openstack/monasca-persister/monasca-persister.spec.j2
@@ -48,6 +48,7 @@ Data is read from Kafka queue and saved either in InfluxDB or Cassandra
 %package -n python-{{ pypi_name }}
 Summary:        Consumes metrics and alarm state transitions from message queue and stores them in database
 Group:          Development/Languages/Python
+Requires:       {{ py2pkg('influxdb') }}
 Requires:       {{ py2pkg('monasca-common') }}
 Requires:       {{ py2pkg('oslo.config') }}
 Requires:       {{ py2pkg('oslo.log') }}
