Update tooz to 1.57.0
Also add missing BuildRequires for testing.

Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>

Change-Id: I574208ef7974b2fee54c626fb446a7a657bfd707
Depends-on: Ic11fd2411010f150dedaf6847f6cfac3db58be7c

--- a/openstack/tooz/tooz.spec.j2
+++ b/openstack/tooz/tooz.spec.j2
@@ -1,6 +1,6 @@
 %global pypi_name tooz
 Name:           {{ py2name('tooz') }}
-Version:        1.56.1
+Version:        1.57.0
 Release:        0
 Summary:        Coordination library for distributed systems
 License:        {{ license('Apache-2.0') }}
@@ -9,9 +9,16 @@ Url:            http://docs.openstack.org/developer/tooz/
 Source0:        https://pypi.io/packages/source/t/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('fasteners') }}
+BuildRequires:  {{ py2pkg('futures') }}
+BuildRequires:  {{ py2pkg('futurist') }}
+BuildRequires:  {{ py2pkg('iso8601') }}
+BuildRequires:  {{ py2pkg('oslo.serialization') }}
 BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
+BuildRequires:  {{ py2pkg('tenacity') }}
 BuildRequires:  {{ py2pkg('testtools') }}
+BuildRequires:  {{ py2pkg('voluptuous') }}
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('enum34') }}
 Requires:       {{ py2pkg('fasteners') }}
