Fix man page build
pbr disabled man page builds by default
(see I579134a2b7980669180c1666503b848835cc2957).

Change-Id: I9f27f477215eaf1fde10d29501fa285781e11fd3
(cherry picked from commit b8bb586589136ad6b521b54079a7645c1caad2ca)

--- a/openstack/os-win/os-win.spec.j2
+++ b/openstack/os-win/os-win.spec.j2
@@ -54,7 +54,7 @@ Documentation for the Hyper-V library.
 
 %build
 %{py2_build}
-%{__python2} setup.py build_sphinx
+%{__python2} setup.py build_sphinx --builder=html,man
 rm -rf html/.{doctrees,buildinfo}
 
 %install
