--- a/openstack/python-designateclient/python-designateclient.spec.j2
+++ b/openstack/python-designateclient/python-designateclient.spec.j2
@@ -50,14 +50,14 @@ Documentation for the OpenStack DNS as a Service - Client.
 %py2_build
 
 # generate html docs
-%{__python2} setup.py build_sphinx
+%{__python2} setup.py build_sphinx --builder=html,man
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 
 %install
 %py2_install
 #man pages
-install -p -D -m 644 doc/build/man/designateclient.1 %{buildroot}%{_mandir}/man1/designateclient.1
+install -p -D -m 644 doc/build/man/*designateclient.1 %{buildroot}%{_mandir}/man1/designateclient.1
 
 %check
 %{__python2} setup.py testr
