Fix man page build
pbr disabled man page builds by default
(see I579134a2b7980669180c1666503b848835cc2957).

Change-Id: I9f27f477215eaf1fde10d29501fa285781e11fd3

--- a/openstack/nova/nova.spec.j2
+++ b/openstack/nova/nova.spec.j2
@@ -472,7 +472,7 @@ find nova -name \*.py -exec sed -i '/\/usr\/bin\/env python/{d;q}' {} +
 %build
 %{py2_build}
 %if 0%{?with_doc}
-%{__python2} setup.py build_sphinx
+%{__python2} setup.py build_sphinx --builder=html,man
 # remove the sphinx-build leftovers
 rm -rf doc/build/html/.{doctrees,buildinfo}
 %fdupes doc/build/html/
