Don't use explicit testr
pbr auto-detects which test runner it should use[1]. So just call the
usual "python setup.py test" and let pbr do the work.

[1] https://docs.openstack.org/developer/pbr/#testing

Change-Id: Id35799f3210a6f0ba09dc8dcc10f8eca6abc444b

--- a/openstack/openstackdocstheme/openstackdocstheme.spec.j2
+++ b/openstack/openstackdocstheme/openstackdocstheme.spec.j2
@@ -34,7 +34,7 @@ to docs.openstack.org. Intended for use by OpenStack projects.
 %py2_install
 
 %check
-%{__python2} setup.py testr
+%{__python2} setup.py test
 
 %files
 %license LICENSE
