--- a/openstack/python-ironic-inspector-client/python-ironic-inspector-client.spec.j2
+++ b/openstack/python-ironic-inspector-client/python-ironic-inspector-client.spec.j2
@@ -42,7 +42,7 @@ This package contains Python client and command line tool for Ironic Inspector.
 %{py2_install}
 
 %check
-%{__python2} setup.py testr
+%{__python2} setup.py test
 
 %files
 %doc README.rst
