--- a/openstack/tooz/tooz.spec.j2
+++ b/openstack/tooz/tooz.spec.j2
@@ -63,7 +63,7 @@ This package contains documentation in HTML format.
 rm -rf html/.{doctrees,buildinfo}
 
 %check
-%{__python2} setup.py testr
+%{__python2} setup.py test
 
 %install
 %py2_install
