backport openstackclient: Fix creating a private flavor with ID auto
When a private flavor is created with ID auto (=default) and a project
is specified for it, instead of trying to add the project to the flavor
called "auto" the ID of the newly created project should be used.

Change-Id: Id0043d6c1d02f32a893eedde490705922f1292ed

--- a/openstack/python-openstackclient/python-openstackclient.spec.j2
+++ b/openstack/python-openstackclient/python-openstackclient.spec.j2
@@ -9,6 +9,8 @@ Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/p/%{sname}/%{sname}-%{version}.tar.gz
 # patch from https://review.openstack.org/#/c/385138/
 Patch0:         0001-Fix-shared-block-migration-options.patch
+# patch from https://review.openstack.org/#/c/416940/
+Patch1:         0002-Fix-creating-private-flavor-with-ID-auto.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
 BuildRequires:  {{ py2pkg('cliff') }}
