Build requirement fixes
Depends-On: I560c3e58c8067bd52a35fe938483ae687d6b9d5d
Change-Id: Ic07e3c9220a3cbbc0c9b5e4d9ac2ea713169ea9c

--- a/openstack/openstackdocstheme/openstackdocstheme.spec.j2
+++ b/openstack/openstackdocstheme/openstackdocstheme.spec.j2
@@ -10,9 +10,11 @@ Source0:        https://pypi.io/packages/source/o/%{sname}/%{sname}-%{version}.t
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('devel') }}
+BuildRequires:  {{ py2pkg('os-api-ref') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
 BuildRequires:  {{ py2pkg('pbr') }}
-BuildRequires:  {{ py2pkg('requests') }}
+BuildRequires:  {{ py2pkg('reno') }}
+BuildRequires: {{ py2pkg('requests') }}
 BuildRequires:  {{ py2pkg('setuptools') }}
 Requires:       {{ py2pkg('Sphinx') }}
 Requires:       {{ py2pkg('oslosphinx') }}
@@ -25,6 +27,8 @@ to docs.openstack.org. Intended for use by OpenStack projects.
 
 %prep
 %autosetup -n %{sname}-%{version}
+# we don't need hacking
+sed -i '/^hacking.*/d' test-requirements.txt
 %py_req_cleanup
 
 %build
