switch use of python_sitelib macro to python2_sitelib
The current policy is to use python2_sitelib, which is the
non-deprecated macro according to Fedora guidelines, although this
might change at some point with the singlespec rework.

This inconsistency was noticed as the result of a comment in a
previous review:

https://review.openstack.org/#/c/460239/7/openstack/masakari-monitors/masakari-monitors.spec.j2@246

Change-Id: I1e8c5f7f212fea50698441d035c9cdf45633fc0b

--- a/openstack/masakari/masakari.spec.j2
+++ b/openstack/masakari/masakari.spec.j2
@@ -199,6 +199,6 @@ testr run --load-list=list
 %doc doc/build/html
 
 %files -n python-%{sname}
-%{python_sitelib}/%{sname}*
+%{python2_sitelib}/%{sname}*
 
 %changelog
