--- a/openstack/mistral/mistral.spec.j2
+++ b/openstack/mistral/mistral.spec.j2
@@ -269,6 +269,6 @@ testr run --load-list=list
 %{_unitdir}/openstack-mistral-executor.service
 
 %files -n python-%{sname}
-%{python_sitelib}/%{sname}*
+%{python2_sitelib}/%{sname}*
 
 %changelog
