--- a/openstack/ironic-lib/ironic-lib.spec.j2
+++ b/openstack/ironic-lib/ironic-lib.spec.j2
@@ -38,7 +38,7 @@ governance <http://governance.openstack.org/reference/projects/ironic.html>`
 %files
 %license LICENSE
 %doc ChangeLog README.rst
-%{python_sitelib}/ironic_lib
-%{python_sitelib}/ironic_lib*egg-info
+%{python2_sitelib}/ironic_lib
+%{python2_sitelib}/ironic_lib*egg-info
 
 %changelog
