--- a/openstack/neutron-lib/neutron-lib.spec.j2
+++ b/openstack/neutron-lib/neutron-lib.spec.j2
@@ -82,8 +82,8 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %files
 %license LICENSE
 %doc ChangeLog README.rst
-%{python_sitelib}/neutron_lib
-%{python_sitelib}/neutron_lib*egg-info
+%{python2_sitelib}/neutron_lib
+%{python2_sitelib}/neutron_lib*egg-info
 
 %files doc
 %doc doc/build/html
