--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -9,6 +9,8 @@ Url:            https://launchpad.net/%{sname}
 Source0:        https://pypi.io/packages/source/k/%{sname}/%{sname}-%{version}.tar.gz
 # https://review.openstack.org/#/c/467836/
 Patch1:         0001-Fix-oslo.messaging-deprecation-of-get_transport.patch
+# https://review.openstack.org/#/c/464732/
+Patch2:         0001-Update-driver-config-parameter-from-string-to-list.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('WebOb') }}
 BuildRequires:  {{ py2pkg('WebTest') }}
