--- a/openstack/stevedore/stevedore.spec.j2
+++ b/openstack/stevedore/stevedore.spec.j2
@@ -6,7 +6,7 @@ Summary:        Manage dynamic plugins for Python applications
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://docs.openstack.org/developer/stevedore/
-Source0:        https://tarballs.openstack.org/stevedore/%{pypi_name}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/s/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('mock') }}
