--- a/openstack/debtcollector/debtcollector.spec.j2
+++ b/openstack/debtcollector/debtcollector.spec.j2
@@ -6,7 +6,7 @@ Summary:        A collection of Python deprecation patterns and strategies
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://docs.openstack.org/developer/debtcollector/
-Source0:        https://tarballs.openstack.org/debtcollector/%{pypi_name}-%{version}.tar.gz
+Source0:        https://pypi.io/packages/source/d/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
 BuildRequires:  openstack-macros
 BuildRequires:  python-devel
 BuildRequires:  {{ py2pkg('fixtures') }}
