Update django_openstack_auth to new release 3.2.0
Co-Authored-By: Thomas Bechtold <tbechtold@suse.com>
Change-Id: I24d80c6960f1953a87f9733e633c2c0e687988dd
Depends-on: Ia94a55373394d3a5eba1b4740f11f615ed08ae30

--- a/openstack/django_openstack_auth/django_openstack_auth.spec.j2
+++ b/openstack/django_openstack_auth/django_openstack_auth.spec.j2
@@ -1,12 +1,14 @@
 %global pypi_name django_openstack_auth
 Name:           {{ py2name('django_openstack_auth') }}
-Version:        3.1.1
+Version:        3.2.0
 Release:        0
 Summary:        Django authentication backend for OpenStack Keystone
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http://docs.openstack.org/developer/django_openstack_auth/
 Source0:        https://pypi.io/packages/source/d/%{pypi_name}/%{pypi_name}-%{version}.tar.gz
+# https://review.openstack.org/#/c/470900/
+Patch1:         0001-Fix-doc-build.patch
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('Django') }}
 BuildRequires:  python-devel
@@ -50,7 +52,7 @@ user against OpenStack's Keystone Identity API.
 This package contains documentation in HTML format.
 
 %prep
-%autosetup -n %{pypi_name}-%{version}
+%autosetup -p1 -n %{pypi_name}-%{version}
 %py_req_cleanup
 
 %build
