Fix microversion_parse requirement
Change-Id: I7c79f8d7ff9600551d27d0cbdcad41e2ec685eda

--- a/openstack/nova/nova.spec.j2
+++ b/openstack/nova/nova.spec.j2
@@ -141,7 +141,7 @@ Requires:       {{ py2pkg('jsonschema') }}
 Requires:       {{ py2pkg('keystoneauth1') }}
 Requires:       {{ py2pkg('keystonemiddleware') }}
 Requires:       {{ py2pkg('lxml') }}
-Requires:       {{ py2pkg('microversion-parse') }}
+Requires:       {{ py2pkg('microversion_parse') }}
 Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('netifaces') }}
 Requires:       {{ py2pkg('python-neutronclient') }}
