monasca-agent: Fix version check
Change-Id: I32b0645016975a3cba5f7c55ffd076cd001431cc

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -112,7 +112,7 @@ rm -rf packaging/monasca-agent{,-deb}
 
 %build
 # Super hack: in a Newton env, make it Newton compatible
-if rpm -q --qf "%{VERSION}\n" {{ py2pkg('oslo.utils') }} | grep -q 3.16; then
+if rpm -q --qf "%{VERSION}\n" {{ py2name('oslo.utils') }} | grep -q 3.16; then
     sed -i -e "s,oslo.utils>=3.18.0,oslo.utils>=3.16.0," requirements.txt
 fi
 %py2_build
