Update tripleo-common to 7.1.0
Change-Id: I2133f6208533ab550c92789b36f53b6626265f35
Depends-on: I35d0c2efab84b7c307f19273b4a323df8916b63e

--- a/openstack/tripleo-common/tripleo-common.spec.j2
+++ b/openstack/tripleo-common/tripleo-common.spec.j2
@@ -1,7 +1,7 @@
 %global sname tripleo-common
-%global sversion 7.0.0
+%global sversion 7.1.0
 Name:           {{ py2name('tripleo-common') }}
-Version:        7.0.0
+Version:        7.1.0
 Release:        0
 Summary:        Python library for code used by TripleO projects
 License:        {{ license('Apache-2.0') }}
@@ -93,6 +93,7 @@ rm -rf doc/build/html/.{doctrees,buildinfo}
 %{_bindir}/upload-puppet-modules
 %{_bindir}/upload-swift-artifacts
 %{_bindir}/tripleo-build-images
+%{_bindir}/bootstrap_host_exec
 %{_datadir}/%{sname}
 
 %files doc
