--- a/openstack/python-novaclient/python-novaclient.spec.j2
+++ b/openstack/python-novaclient/python-novaclient.spec.j2
@@ -1,12 +1,13 @@
 Name:           python-novaclient
 Epoch:          {{ epoch('python-novaclient') }}
-Version:        8.0.0
+Version:        9.0.0
 Release:        0
 Summary:        Python API and CLI for OpenStack Nova
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Languages/Python
 Url:            http:///launchpad.net/{name}
 Source0:        https://pypi.io/packages/source/p/%{name}/%{name}-%{version}.tar.gz
+Patch1:         0001-Fix-setting-global_request_id-in-SessionClient.patch
 BuildRequires:  openssl
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
@@ -80,7 +81,7 @@ the OpenStack Nova API.
 This package contains the testsuite.
 
 %prep
-%autosetup -n %{name}-%{version}
+%autosetup -p1 -n %{name}-%{version}
 %py_req_cleanup
 
 %build
