--- a/openstack/mistral/mistral.spec.j2
+++ b/openstack/mistral/mistral.spec.j2
@@ -1,16 +1,23 @@
-%global sname mistral
-Name:           {{ py2name('mistral') }}
-Version:        4.0.2
-Release:        0
+{% set pypi_name = 'mistral' %}
+{% set source = fetch_source('http://tarballs.openstack.org/mistral/mistral-master.tar.gz') %}
+{% set upstream_version = upstream_version() %}
+{% set rpm_release = '1' %}
+%if 0%{?rhel} || 0%{?fedora}
+%global rdo 1
+%endif
+Name:           {{ py2name() }}
+Version:        {{ py2rpmversion() }}
+Release:        {{ py2rpmrelease() }}
 Summary:        Workflow Service for OpenStack cloud
 License:        {{ license('Apache-2.0') }}
 Group:          Development/Libraries
 Url:            https://launchpad.net/mistral
-Source0:        http://tarballs.openstack.org/%{sname}/%{sname}-%{version}.tar.gz
+Source0:        {{ source|basename }}
 Source1:        mistral-api.service
 Source2:        mistral-engine.service
 Source3:        mistral-executor.service
 BuildRequires:  openstack-macros
+BuildRequires:  {{ py2pkg('aodhclient') }}
 BuildRequires:  {{ py2pkg('python-barbicanclient') }}
 BuildRequires:  {{ py2pkg('python-ceilometerclient') }}
 BuildRequires:  {{ py2pkg('python-cinderclient') }}
@@ -19,6 +26,7 @@ BuildRequires:  {{ py2pkg('python-designateclient') }}
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('fixtures') }}
 BuildRequires:  {{ py2pkg('python-glanceclient') }}
+BuildRequires:  {{ py2pkg('gnocchiclient') }}
 BuildRequires:  {{ py2pkg('python-heatclient') }}
 BuildRequires:  {{ py2pkg('python-ironic-inspector-client') }}
 BuildRequires:  {{ py2pkg('python-ironicclient') }}
@@ -26,6 +34,7 @@ BuildRequires:  {{ py2pkg('kazoo') }}
 BuildRequires:  {{ py2pkg('python-keystoneclient') }}
 BuildRequires:  {{ py2pkg('keystonemiddleware') }}
 BuildRequires:  {{ py2pkg('python-magnumclient') }}
+BuildRequires:  {{ py2pkg('mistral-lib') }}
 BuildRequires:  {{ py2pkg('python-mistralclient') }}
 BuildRequires:  {{ py2pkg('python-muranoclient') }}
 BuildRequires:  {{ py2pkg('python-neutronclient') }}
@@ -46,6 +55,7 @@ BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('python-subunit') }}
 BuildRequires:  {{ py2pkg('reno') }}
 BuildRequires:  {{ py2pkg('requests-mock') }}
+BuildRequires:  {{ py2pkg('python-senlinclient') }}
 BuildRequires:  {{ py2pkg('six') }}
 BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('python-swiftclient') }}
@@ -67,7 +77,7 @@ BuildRequires:  systemd
 
 %description
 System package - %{name}
-Python package - python=%{sname}
+Python package - python-{{ pypi_name }}
 
 %package        doc
 Summary:        Documentation for OpenStack Workflow Service
@@ -90,7 +100,7 @@ OpenStack Mistral documentaion.
 .
 This package contains the documentation
 
-%package -n     python-%{sname}
+%package -n     python-{{ pypi_name }}
 Summary:        Mistral Python libraries
 Requires:       {{ py2pkg('Babel') }}
 Requires:       {{ py2pkg('PyYAML') }}
@@ -112,6 +122,7 @@ Requires:       {{ py2pkg('jsonschema') }}
 Requires:       {{ py2pkg('python-keystoneclient') }}
 Requires:       {{ py2pkg('keystonemiddleware') }}
 Requires:       {{ py2pkg('python-magnumclient') }}
+Requires:       {{ py2pkg('mistral-lib') }}
 Requires:       {{ py2pkg('python-mistralclient') }}
 Requires:       {{ py2pkg('mock') }}
 Requires:       {{ py2pkg('python-muranoclient') }}
@@ -134,6 +145,7 @@ Requires:       {{ py2pkg('pbr') }}
 Requires:       {{ py2pkg('pecan') }}
 Requires:       {{ py2pkg('requests') }}
 Requires:       {{ py2pkg('retrying') }}
+Requires:       {{ py2pkg('python-senlinclient') }}
 Requires:       {{ py2pkg('setuptools') }}
 Requires:       {{ py2pkg('six') }}
 Requires:       {{ py2pkg('stevedore') }}
@@ -145,7 +157,7 @@ Requires:       {{ py2pkg('yaql') }}
 Requires:       {{ py2pkg('zake') }}
 Requires:       {{ py2pkg('python-zaqarclient') }}
 
-%description -n python-%{sname}
+%description -n python-{{ pypi_name }}
 Mistral is a workflow service.
 Most business processes consist of multiple distinct interconnected steps that need to be executed in a particular order
 in a distributed environment. One can describe such process as a set of tasks and task relations and upload such description
@@ -182,7 +194,11 @@ This package contains the mistral executor, which is one of core services of mis
 which the API servers will use.
 
 %prep
-%autosetup -n %{sname}-%{version}
+%if 0%{?rdo}
+%autosetup -n {{ pypi_name }}-%{upstream_version}
+%else
+%autosetup -n {{ pypi_name }}-{{upstream_version}}
+%endif
 %py_req_cleanup
 
 %build
@@ -216,9 +232,7 @@ chmod +x %{buildroot}%{_bindir}/mistral*
 %openstack_pre_user_group_create mistral mistral
 
 %check
-testr init
-testr list-tests | grep -v   mistral.tests.unit.engine.test_with_items.WithItemsEngineTest.test_with_items_and_adhoc_action > list
-testr run --load-list=list
+%{__python2} setup.py test
 
 %post api
 %systemd_post openstack-mistral-api.service
@@ -268,7 +282,7 @@ testr run --load-list=list
 %files executor
 %{_unitdir}/openstack-mistral-executor.service
 
-%files -n python-%{sname}
-%{python2_sitelib}/%{sname}*
+%files -n python-{{ pypi_name }}
+%{python2_sitelib}/{{ pypi_name }}*
 
 %changelog
