Add polkit permissions for monasca-agent user
On SLES12 monasca-agent user cannot execute libvirt plugin.
The problems lies in lack of permissions over 'org.libvirt.unix.monitor'
in polkit. Commits adds necessary file that enables,
on behalf of user who runs monasca-agent, executing commands from libvirt
plugin.

Change-Id: I6ab8c28dd4c913f1d21931c064de0b50435593d4
(cherry picked from commit 95eb2845751a05f723f35a65f99ee7b31c3e3e4c)

--- a/openstack/monasca-agent/monasca-agent.spec.j2
+++ b/openstack/monasca-agent/monasca-agent.spec.j2
@@ -30,7 +30,8 @@ Url:            https://wiki.openstack.org/wiki/Monasca
 Source0:        {{ source|basename }}
 Source1:        %{name}-sudoers
 Source2:        %{name}.service
-Source3:        openstack-monasca-agent.tmpfiles
+Source3:        %{name}.tmpfiles
+Source4:        %{name}.polkit
 BuildRequires:  openstack-macros
 
 %if 0%{?suse_version}
@@ -141,7 +142,10 @@ ln -sr %{buildroot}%{_sbindir}/service %{buildroot}%{_sbindir}/rc%{name}
 %endif
 
 # systemd tmpfile
-install -D -m 644 %{SOURCE3} %{buildroot}/%{_tmpfilesdir}/openstack-monasca-agent.conf
+install -D -m 644 %{SOURCE3} %{buildroot}%{_tmpfilesdir}/openstack-monasca-agent.conf
+
+# polkit permissions
+install -D -m 644 %{SOURCE4} %{buildroot}%{_sysconfdir}/polkit-1/rules.d/49-monasca-agent.rules
 
 %pre
 # create user and groups
@@ -175,6 +179,9 @@ PYTHONPATH=. NOSE_EXCLUDE=test_override_values nosetests tests -v
 %if 0%{?suse_version}
 %{_sbindir}/rc%{name}
 %endif
+%{_sysconfdir}/polkit-1/
+%{_sysconfdir}/polkit-1/rules.d/
+%{_sysconfdir}/polkit-1/rules.d/49-monasca-agent.rules
 
 %files -n python-%{sname}
 %doc README.md
