--- a/openstack/openstack-macros/openstack-macros.spec.j2
+++ b/openstack/openstack-macros/openstack-macros.spec.j2
@@ -1,4 +1,4 @@
-%if 0%{?rhel} || 0%{?fedora}
+%if 0%{?rhel}
 %global rdo 1
 %endif
 Name:           openstack-macros
@@ -11,6 +11,7 @@ Url:            https://wiki.openstack.org/wiki/Rpm-packaging
 Source0:        macros.openstack-common
 Source1:        macros.openstack-suse
 Source2:        macros.openstack-rdo
+Source3:        macros.openstack-fedora
 BuildArch:      noarch
 %if 0%{?rdo}
 Obsoletes:     rdo-rpm-macros <= 1-3
@@ -35,6 +36,9 @@ install -D -m644 %{SOURCE1} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-suse
 %if 0%{?rdo}
 install -D -m644 %{SOURCE2} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-rdo
 %endif
+%if 0%{?fedora}
+install -D -m644 %{SOURCE2} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-fedora
+%endif
 
 %files
 %{_sysconfdir}/rpm/macros.openstack-common
@@ -44,6 +48,8 @@ install -D -m644 %{SOURCE2} %{buildroot}%{_sysconfdir}/rpm/macros.openstack-rdo
 %if 0%{?rdo}
 %{_sysconfdir}/rpm/macros.openstack-rdo
 %endif
+%if 0%{?fedora}
+%{_sysconfdir}/rpm/macros.openstack-fedora
+%endif
 
 %changelog
-
