murano-dashboard: fix semantic_version requirement
Change-Id: I82c04775ab307b83a0791ead3ff5a18ae2c06b6f
Depends-On: Idcb9bcaff77133a2f4db6d352931c8b30df2b440

--- a/openstack/murano-dashboard/murano-dashboard.spec.j2
+++ b/openstack/murano-dashboard/murano-dashboard.spec.j2
@@ -39,7 +39,7 @@ Requires:      {{ py2pkg('django-formtools') }}
 Requires:      {{ py2pkg('python-muranoclient') }}
 Requires:      {{ py2pkg('oslo.log') }}
 Requires:      {{ py2pkg('pbr') }}
-Requires:      {{ py2pkg('semantic-version') }}
+Requires:      {{ py2pkg('semantic_version') }}
 Requires:      {{ py2pkg('yaql') }}
 
 %description -n {{ py2pkg('horizon-plugin-murano-ui') }}
