--- a/openstack/automaton/automaton.spec.j2
+++ b/openstack/automaton/automaton.spec.j2
@@ -1,6 +1,6 @@
 %global sname automaton
 Name:           {{ py2name('automaton') }}
-Version:        1.9.0
+Version:        1.11.0
 Release:        0
 Summary:        Friendly state machines for python
 License:        {{ license('Apache-2.0') }}
@@ -29,7 +29,7 @@ Friendly state machines for python.
 %package doc
 Summary:        Documentation for the Automaton Library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 
 %description doc
 Documentation for the Automaton library.
@@ -37,6 +37,7 @@ Documentation for the Automaton library.
 %prep
 %autosetup -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %py2_build
