--- a/openstack/oslo.middleware/oslo.middleware.spec.j2
+++ b/openstack/oslo.middleware/oslo.middleware.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.middleware
 Name:           {{ py2name('oslo.middleware') }}
-Version:        3.28.0
+Version:        3.29.2
 Release:        0
 Summary:        OpenStack oslo.middleware library
 License:        {{ license('Apache-2.0') }}
@@ -45,7 +45,7 @@ for limiting size/connection etc.
 %package doc
 Summary:        Documentation for OpenStack middleware library
 BuildRequires:  {{ py2pkg('Sphinx') }}
-BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('openstackdocstheme') }}
 BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
@@ -58,6 +58,7 @@ This package contains the documentation.
 %prep
 %autosetup -p1 -n %{sname}-%{version}
 %py_req_cleanup
+sed -i 's/^warning-is-error.*/warning-is-error = 0/g' setup.cfg
 
 %build
 %{py2_build}
